--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 /* css default */
-body {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
+ body{
+    background-color: #ccc;
+}
+
+h1, h2, h3, h4, h5, h6, .nav-link{
+    font-family: 'Rubik', sans-serif !important;
 }
 
 html {
@@ -10,7 +13,7 @@ html {
 
 /* variables - preprocessors */
 :root {
-    --primary-color: #be3144;
+    --primary-color: #060042;
     --secondary-color: #45567d;
     --bg-gradient: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
     --dark: #303841;
@@ -22,7 +25,7 @@ html {
 }
 
 .navbar-nav .nav-link:hover {
-    border-bottom: 2px solid var(--secondary-color);
+    border-bottom: 2px solid #fff;
     padding-bottom: 0px;
 }
 
@@ -70,7 +73,7 @@ html {
     border-bottom: 5px solid var(--primary-color) !important;
 }
 
-.btn-outline-dark{
+.btn-outline-dark {
     background-color: rgba(0, 0, 0, 0.062);
     color: #fff;
 }
