--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,38 @@
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+    scrollbar-width: auto;
+    scrollbar-color: #d1cbd2 #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+    background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+    border-radius: 10px;
+    /* border: 3px solid #ffffff; */
+}
+
+
 /* css default */
- body{
+body {
     background-color: #ccc;
 }
 
-h1, h2, h3, h4, h5, h6, .nav-link{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.nav-link {
     font-family: 'Rubik', sans-serif !important;
 }
 
@@ -64,7 +93,8 @@ html {
 }
 
 /* icons */
-.contact-icons .fa-brands:hover {
+.contact-icons .fa-brands:hover,
+.contact-icons .fa-solid:hover {
     color: #fff !important;
     transition: 0.5s ease-out;
 }
@@ -85,6 +115,20 @@ html {
     }
 
     .welcome-section {
-        height: 80vh;
+        height: 40vh;
     }
+}
+
+
+.btn-primary {
+    background-color: var(--primary-color) !important;
+}
+
+
+
+/* nav toggler */
+.navbar-toggler:focus {
+    /* text-decoration: none; */
+    outline: unset;
+    box-shadow: unset;
 }
