moocs page added

--- a/views/project.html
+++ b/views/project.html
@@ -54,7 +54,6 @@
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                     aria-label="Toggle navigation">
                     <i class="fa-solid fa-bars-staggered text-white"></i>
-                    <!-- <span class="navbar-toggler-icon"></span> -->
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
@@ -62,13 +61,10 @@
                             <a class="nav-link fs-5 fw-bold text-white" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item mx-md-3">
-                            <a class="nav-link fs-5 fw-bold text-white" href="../index.html">About</a>
-                        </li>
-                        <li class="nav-item mx-md-3">
                             <a class="nav-link fs-5 fw-bold text-white" href="./project.html">Portfolio</a>
                         </li>
                         <li class="nav-item mx-md-3">
-                            <a class="nav-link fs-5 fw-bold text-white" href="#footer">Contact</a>
+                            <a class="nav-link fs-5 fw-bold text-white" href="./moocs.html">MOOCs</a>
                         </li>
                     </ul>
                 </div>
@@ -249,15 +245,10 @@
                     </a>
                 </div>
             </div>
-
-            <a class="text-decoration-none text-muted" href="./index.html">Mohammad Naeem Tahir</a> | No rights
+            <a class="text-decoration-none text-muted" href="../index.html">Mohammad Naeem Tahir</a> | No rights
             reserved.
         </div>
     </footer>
-
-
-
-
 </body>
 
 </html>
