--- a/views/moocs.html
+++ b/views/moocs.html
@@ -11,7 +11,7 @@
     <title>Mohammad Naeem Tahir</title>
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="./assets/favicon_io/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/favicon_io/favicon.ico" type="image/x-icon">
 
     <!-- CDNs -->
     <!-- bootstrap 5.2 -->
