New projects added - 9/2/2022

--- a/views/project.html
+++ b/views/project.html
@@ -77,6 +77,7 @@
         <div class="welcome-section d-flex justify-content-center align-items-center flex-column text-white">
             <h1 class="mt-5 fa">Projects</h1>
             <h4 class="fw-bold text-center">HTML & CSS, JavaScript, Bootstrap, Laravel (Blade), ReactJs</h4>
+            
         </div>
     </section>
 
@@ -209,6 +210,42 @@
                                 <h3 class="text-center">Cyan Waterpark</h3>
                                 <div class="text-center">
                                     <a href="https://cyan.devarx.org/" target="_blank"
+                                        class="btn btn-warning rounded-pill px-5 py-1">View <i
+                                            class="ms-3 fa-solid fa-eye"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-4">
+                        <div class="card">
+                            <img src="../assets/images/medvita.PNG" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-center">
+                                    <span class="mx-1 bg-primary badge rounded-pill">Bootstrap</span>
+                                    <span class="mx-1 bg-primary badge rounded-pill">Js</span>
+                                    <span class="mx-1 bg-primary badge rounded-pill">Loading Animations</span>
+                                </p>
+                                <h3 class="text-center">MedVita</h3>
+                                <div class="text-center">
+                                    <a href="https://medvita.devarx.org/" target="_blank"
+                                        class="btn btn-warning rounded-pill px-5 py-1">View <i
+                                            class="ms-3 fa-solid fa-eye"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-4">
+                        <div class="card">
+                            <img src="../assets/images/emportal-dashboard.PNG" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-center">
+                                    <span class="mx-1 bg-primary badge rounded-pill">Laravel</span>
+                                    <span class="mx-1 bg-primary badge rounded-pill">CRUD</span>
+                                    <span class="mx-1 bg-primary badge rounded-pill">Admin Panel</span>
+                                </p>
+                                <h3 class="text-center">Emportal Dashboard</h3>
+                                <div class="text-center">
+                                    <a href="https://emportal.devarx.org/" target="_blank"
                                         class="btn btn-warning rounded-pill px-5 py-1">View <i
                                             class="ms-3 fa-solid fa-eye"></i></a>
                                 </div>
