--- a/views/project.html
+++ b/views/project.html
@@ -77,7 +77,7 @@
         <div class="welcome-section d-flex justify-content-center align-items-center flex-column text-white">
             <h1 class="mt-5 fa">Projects</h1>
             <h4 class="fw-bold text-center">HTML & CSS, JavaScript, Bootstrap, Laravel (Blade), ReactJs</h4>
-            
+
         </div>
     </section>
 
@@ -246,6 +246,26 @@
                                 <h3 class="text-center">Emportal Dashboard</h3>
                                 <div class="text-center">
                                     <a href="https://emportal.devarx.org/" target="_blank"
+                                        class="btn btn-warning rounded-pill px-5 py-1">View <i
+                                            class="ms-3 fa-solid fa-eye"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-4">
+                        <div class="card">
+                            <img src="../assets/images/free-qr.PNG" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-center">
+                                    <span class="mx-1 bg-primary badge rounded-pill">jQuery</span>
+                                    <span class="mx-1 bg-primary badge rounded-pill">QRcode JS</span>
+                                    <span class="mx-1 bg-primary badge rounded-pill">HTML</span>
+                                    <span class="mx-1 bg-primary badge rounded-pill">CSS</span>
+                                    <span class="mx-1 bg-primary badge rounded-pill">Bootstrap</span>
+                                </p>
+                                <h3 class="text-center">Emportal Dashboard</h3>
+                                <div class="text-center">
+                                    <a href="../free-qr/index.html" target="_blank"
                                         class="btn btn-warning rounded-pill px-5 py-1">View <i
                                             class="ms-3 fa-solid fa-eye"></i></a>
                                 </div>
