--- a/views/project.html
+++ b/views/project.html
@@ -263,7 +263,7 @@
                                     <span class="mx-1 bg-primary badge rounded-pill">CSS</span>
                                     <span class="mx-1 bg-primary badge rounded-pill">Bootstrap</span>
                                 </p>
-                                <h3 class="text-center">Emportal Dashboard</h3>
+                                <h3 class="text-center">Free QR Code Generator</h3>
                                 <div class="text-center">
                                     <a href="../free-qr/index.html" target="_blank"
                                         class="btn btn-warning rounded-pill px-5 py-1">View <i
