Loading theme updated, bodymovin library

--- a/css/styles.css
+++ b/css/styles.css
@@ -12477,3 +12477,13 @@ header.masthead .h1 {
   transform: scale(1.01);
   cursor: grab;
 }
+
+.loading-animation {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  background-color: #ffffff;
+}
